--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=http://localhost:5000/api
+VITE_GOOGLE_CLIENT_ID=200000113080-akd5g6eha2pk7m1n00vgjrn45s5osmha.apps.googleusercontent.com
